tests/fixtures/invalid/float_bytes.py
# Cannot call float() with Bytes
x = float(b"hello")
